--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="logo">
                 <!-- If you have an image logo, uncomment and replace src -->
-                <<img src="logo.png" alt="NickBanjiFN Logo" class="graphic-logo"> 
+                <img src="logo.png" alt="NickBanjiFN Logo" class="graphic-logo"> 
                 <a href="#hero" class="text-logo">NickBanji<span class="highlight-cyan">FN</span></a>
             </div>
             <nav class="main-nav">
