Update website files and add chatbot responses

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="logo">
                 <!-- If you have an image logo, uncomment and replace src -->
-                <img src="logo.png" alt="NickBanjiFN Logo" class="graphic-logo"> 
+                <img src="logo.png" alt="NickBanjiFN Logo" class="graphic-logo">
                 <a href="#hero" class="text-logo">NickBanji<span class="highlight-cyan">FN</span></a>
             </div>
             <nav class="main-nav">
@@ -67,7 +67,7 @@
                 <p class="section-intro-text">
                     "Welcome to Fortnite! Not sure where to start? Check out my beginner guides to learn the ropes, master your builds, and start crushing the competition!"
                 </p>
-                
+
                 <div class="guide-grid">
                     <div class="guide-card cyberpunk-glass reveal-item">
                         <i class="fas fa-rocket guide-icon"></i>
@@ -364,6 +364,25 @@
             <p class="footer-disclaimer">Fortnite &copy; Epic Games, Inc.</p>
         </div>
     </footer>
+
+    <!-- Chatbot Container -->
+    <div id="chatbot-container" class="chatbot-container">
+        <div class="chatbot-header">
+            <span class="chatbot-title"><i class="fas fa-robot"></i> NickBotFN</span>
+            <button id="chatbot-toggle" class="chatbot-toggle-btn"><i class="fas fa-minus"></i></button>
+        </div>
+        <div class="chatbot-body" id="chatbot-body">
+            <div class="chatbot-message bot-message">Hello! I'm NickBotFN. How can I assist you with Fortnite? Try asking about "building" or "best weapons".</div>
+        </div>
+        <div class="chatbot-footer">
+            <input type="text" id="chatbot-input" placeholder="Type your message...">
+            <button id="chatbot-send-btn"><i class="fas fa-paper-plane"></i></button>
+        </div>
+    </div>
+
+    <button id="open-chatbot-btn" class="open-chatbot-btn cyber-btn primary-feature">
+        <i class="fas fa-comment-dots"></i> Chat
+    </button>
 
     <script src="script.js"></script>
 </body>
