Update project files

--- a/index.html
+++ b/index.html
@@ -270,20 +270,16 @@
                 <div class="upcoming-events cyberpunk-glass reveal-item">
                     <h3><i class="fas fa-calendar-alt"></i> Upcoming Streams & Events</h3>
                     <div class="event-schedule">
+                    
                         <div class="event-item">
-                            <span class="event-date">AUG 25</span>
-                            <span class="event-title">Community Customs Night</span>
-                            <span class="event-time">8:00 PM EST</span>
+                            <span class="event-date">NOV 30</span>
+                            <span class="event-title">Map Release: Banji Bed Wars</span>
+                            <span class="event-time">ALL DAY</span>
                         </div>
                         <div class="event-item">
-                            <span class="event-date">SEP 01</span>
-                            <span class="event-title">Subscriber Play-Along Stream</span>
-                            <span class="event-time">7:00 PM EST</span>
-                        </div>
-                        <div class="event-item">
-                            <span class="event-date">SEP 10</span>
-                            <span class="event-title">Fortnite New Season Preview</span>
-                            <span class="event-time">6:00 PM EST</span>
+                            <span class="event-date">MAR 1</span>
+                            <span class="event-title">First Stream on Youtube</span>
+                            <span class="event-time">ALL DAY</span>
                         </div>
                     </div>
                     <p class="countdown-timer" id="nextStreamCountdown">Next Stream in: --:--:--</p>
@@ -354,7 +350,6 @@
         <div class="container">
             <div class="footer-socials">
                 <a href="https://twitch.tv/nickbanjifn" target="_blank"><i class="fab fa-twitch"></i></a>
-                <!-- UPDATED YOUTUBE CHANNEL LINK -->
                 <a href="https://www.youtube.com/@NICKBANJIFN" target="_blank" class="social-icon youtube"><i class="fab fa-youtube"></i></a>
                 <a href="https://instagram.com/nickbanjifn" target="_blank" class="social-icon instagram"><i class="fab fa-instagram"></i></a>
                 <a href="https://twitter.com/nickbanjifn" target="_blank" class="social-icon twitter"><i class="fab fa-twitter"></i></a>
