Update Fortnite website files

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NickBanjiFN – Your Ultimate Fortnite Hub</title>
+    <title> NBFNsupport – Your Ultimate Fortnite Hub</title>
     <link rel="stylesheet" href="style.css">
     <!-- Google Fonts for a cyberpunk feel -->
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Rajdhani:wght@400;600;700&display=swap" rel="stylesheet">
